tests/fail/0005_oper_tparam.ec
type 'a t.

op o [] : 'a t -> int.
